--- a/frontend/global.css
+++ b/frontend/global.css
@@ -1,4 +1,4 @@
-/* 地图相关样式 */
+/* 地图相关样式
 .store-popup .leaflet-popup-content-wrapper {
   border-radius: 0.5rem;
   box-shadow: 0 1px 2px rgba(0,0,0,0.1);
@@ -13,4 +13,4 @@
   display: flex;
   align-items: center;
   justify-content: center;
-} 
+}  */
